--- a/app/globals.css
+++ b/app/globals.css
@@ -79,11 +79,11 @@ body {
 }
 
 .feature-item {
-  @apply flex justify-center items-center w-[320px];
+  @apply flex justify-center items-center w-full max-w-[320px];
 }
 
 .feature-item > div {
-  @apply w-[284px] py-[24px];
+  @apply w-full max-w-[284px] py-[24px];
 }
 
 .feature-item h4 {
@@ -91,7 +91,7 @@ body {
 }
 
 .feature-item p {
-  @apply leading-[24px] text-[20px] w-[255px];
+  @apply leading-[24px] text-[20px] w-full max-w-[255px];
 }
 
 .service-item {
@@ -152,7 +152,7 @@ body {
 }
 
 .dm-cards-container {
-  @apply w-[480px] h-[366px] border flex flex-col items-center px-[29px] pt-[39px];
+  @apply lg:w-[480px] h-[366px] border flex flex-col items-center px-[29px] pt-[39px];
 }
 
 .dm-card-img {
@@ -176,7 +176,7 @@ body {
 }
 
 .skill-display-container {
-  @apply w-[1465px] h-[629px] border rounded-[22px] flex justify-between px-[62px] py-[48px];
+  @apply lg:w-[1231px] h-[509px] border rounded-[22px] flex justify-between lg:px-[62px] lg:py-[48px];
 }
 
 .skill-display-container h4 {
@@ -188,35 +188,35 @@ body {
 }
 
 .skill-display-left {
-  @apply  w-[742px];
+  @apply  lg:w-[742px];
 }
 
 .skill-display-hr1 {
-  @apply bg-[#2F00FF] h-[2px] w-[328px];
+  @apply bg-[#2F00FF] h-[2px] lg:w-[328px];
 }
 
 .skill-display-hr2 {
-  @apply bg-[#2F00FF] h-[2px] w-[404px];
+  @apply bg-[#2F00FF] h-[2px] lg:w-[404px];
 }
 
 .skill-display-hr3 {
-  @apply bg-[#2F00FF] h-[2px] w-[544px];
+  @apply bg-[#2F00FF] h-[2px] lg:w-[544px];
 }
 
-.krp-flexbox {
-  @apply w-[384px];
+.skill-display-img-container {
+  @apply hidden lg:block;
 }
 
 .krp-flexbox h6 {
-  @apply font-bold text-[32px] leading-[39px];
+  @apply font-bold text-[27px] leading-[33px];
 }
 
 .krp-flexbox ol {
-  @apply pt-[16px] pl-7 list-decimal text-[19px] leading-[23px];
+  @apply pt-[10px] pl-7 list-decimal text-[19px] leading-[23px];
 }
 
 .krp-flexbox .main-li {
-  @apply pb-[11px];
+  @apply lg:pb-[11px];
 }
 
 .krp-flexbox ol ul {
@@ -224,9 +224,21 @@ body {
 }
 
 .dm-added-info-col h3 {
-  @apply pb-[13px] text-[36px] leading-[44px] font-bold;
+  @apply text-[36px] leading-[44px] font-bold;
 }
 
 .dm-added-info-col p {
   @apply text-[23px] leading-[28px];
+}
+
+.seo-template-flex div {
+  @apply flex flex-col items-center gap-[19px];
+}
+
+.seo-template-flex div div {
+  @apply w-full max-w-[356px] lg:w-[615px] h-[258px] bg-gray-200;
+}
+
+.seo-template-flex div h4 {
+  @apply text-[20px] leading-[24px] italic lg:w-[361px] text-center;
 }
